fixes photo stretching on about page

--- a/assets/scss/partials/_old_styles.scss
+++ b/assets/scss/partials/_old_styles.scss
@@ -36,7 +36,7 @@
     }
   
     .ds-af {
-      height: fit-content;
+      height: auto;
       width: 100%;
 
       @include medium {
